2001-08-04  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* game.cc: fixed 'return to menu' after 'start new game' bug
	* configure.in, acconfig.h: define VER_MAJOR, VER_MINOR, VER_EXTRA 

2001-08-04  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/intrinsics.cc: Barge flag for SI fixed.
	* intrinsics.cc:  Watch for set_quality(-359).

2001-08-03  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* bggame.cc: fixed palette-change-flash in BG intro
	* sigame.cc: same for SI

2001-08-03  Max Horn <max@quendi.de>
	* audio/Audio.cc: added static Audio::Destroy() to deinit the audio system
	* exult.cc: properly use Audio::Destroy() to deinit the audio system

2001-08-03  Max Horn <max@quendi.de>
	* configure.in: slight change for Darwin/Mac OS X
	* audio/conv.cc added, conv.h cleaned up
	* audio/Audio.cc/.h: cleaned up code, fixed speech output on big endian systems
	* audio/Mixer.cc: code clean up
	* audio/pcb.h: disabled a call to "cerr" in the MacOS version, as it could be hit during
	  the audio call back, leading to a deep crash
	* usecode/useval.c: namespace clean up
	* Makefiles: added conv.cc
	* many many files: added/updated/unified legal header

2001-07-03  Dominik Reichardt <gigdr@tesionmail.de>
	* docs/faq/ and docs/readme/ : added makefile.win32 as Unix uses ':' 
	  as seperator and Win32 uses ';'. Changed makefile to output *.dat 
	  instead of *.inc

2001-08-03  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* gumps/Jawbone_gump.cc: fixed Jawbone display bug

2001-08-03  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/conversation.cc (Conversation): Show faces with
	translucency, and center text if screen is filled by face.

	* usecode/intrinsics.cc: Don't check for blocking if it looks like
	a drawbridge (this whole thing is kind of a mess!).
	* gamewin.cc: Don't get stuck after teleporting.
	* actions.cc: Avatar can open doors now.

2001-08-02  Jeff Freedman  <jeff@amy.nerble.net>
